implemente mensaje en todas las clases posibles, falta encriptar y firma. Aparte cambie un par de metodos para poder separarlos y tener el codigo mas legible